[project]
name = "catweight"
version = "0.1.0"
description = "Cat food weight tracking application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]
